[package]
name = "reqwest-file"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Alexander van Ratingen"]
homepage = "https://github.com/alvra/reqwest-file"
repository = "https://github.com/alvra/reqwest-file"
documentation = "https://docs.rs/reqwest-file"
description = "Use web resources like regular async files"
readme = "README.md"
keywords = ["http", "request", "async"]

[dependencies]
bytes = "1.7"
pin-project = "1.1"
futures-util = "0.3"
tokio = { version = "1.39", default-features = false, optional = true }
tokio-util = { version = "0.7", default-features = false, features = ["io", "io-util"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["stream"] }

[features]
nightly = []
tokio_io = ["dep:tokio", "dep:tokio-util"]
futures_io = ["futures-util/io"]

[dev-dependencies]
paste = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = { version = "1.39", features = ["rt", "macros"] }
tokio-test = "0.4"
axum = { version = "0.5", default-features = false, features = ["http1", "headers", "query"] }
